--- a/riya_portfolio/pubspec.yaml
+++ b/riya_portfolio/pubspec.yaml
@@ -35,8 +35,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  font_awesome_flutter: ^10.7.0
   
   audioplayers: ^6.0.0
+
+  geolocator: ^13.0.2
+  http: ^1.2.2
+  flutter_spinkit: ^5.2.1
+
+  animated_text_kit: ^4.2.2
+
+  firebase_core: ^3.10.1
+  firebase_auth: ^5.4.1
+  cloud_firestore: ^5.6.2
+  modal_progress_hud_nsn: ^0.5.0
 
 dev_dependencies:
   flutter_test:
